Fix spacing - docs

--- a/scss/base/_spacings.scss
+++ b/scss/base/_spacings.scss
@@ -5,10 +5,11 @@
 /*doc
 ---
 title: Espacements
-category: Helpers
+collection: _design
+category: Design Elements
 versionning:
 - version: 1.0
-  update: 2017-12-23T10:00:00Z
+  update: 2019-07-14T10:00:00Z
   owner: Axel Roche
 ---
 
